almost finished proposal page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   			</div>
   			<ul class="nav-links">
   				<li><a href="">Contract</a></li>
-  				<li><a href="">Stages</a></li>
-  				<li><a href="">Aggrements</a></li>
+  				<li><a href="index.html">Stages</a></li>
+  				<li><a href="project-proposal.html">Project Proposal</a></li>
   			</ul>
   		</nav>
   	</header>
@@ -124,6 +124,7 @@
 			</p>
 
 			<h3>Estimated time: 1-3 days (hourly rate 10-30 hours)</h3>
+			<img src="img/phases.png" alt="">
 		</section>
 
 
@@ -138,12 +139,15 @@
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.sticky/1.0.4/jquery.sticky.min.js"></script>
-    <script>
-    	$('header').sticky({topSpacing:0})
-    </script>
+    <script src="js/plugins/pickadate/picker.js"></script>
+    <script src="js/plugins/pickadate/picker.date.js"></script>
+    <link rel="stylesheet" href="js/plugins/pickadate/default.css">
+    <link rel="stylesheet" href="js/plugins/pickadate/default.date.css">
+    
   </body>
 </html>
 
