saving some changes

--- a/project-proposal.html
+++ b/project-proposal.html
@@ -63,8 +63,8 @@
 
   				<h3>Discovery Phase</h3>
   				<table class="table">
-  					<thead class="thead-inverse">
-  						<tr>
+  					<thead class="thead-inverse" >
+  						<tr class="bg-color" >
   							<th>#</th>
   							<th>Milestone</th>
   							<th>Due Date</th>
@@ -78,14 +78,14 @@
   							<td><p>Work Begins</p></td>
   							<td><input type="text" value="When Received"></td>
   							<td><p>Signed Contract</p></td>
-  							<td><input type="text" class="fee"></td>
+  							<td>&#36;<input type="text" class="fee"></td>
   						</tr>
   						<tr>
   							<th scope="row">2</th>
   							<td><p>Gathering Information</p></td>
   							<td><input type="text" class="datepicker"></td>
-  							<td><p>Written Description of the site, Requirements, Examples</p></td>
-  							<td><input type="text" class="fee"></td>
+  							<td><p>Written Description, Requirements</p></td>
+  							<td>&#36;<input type="text" class="fee"></td>
   						</tr>
   					</tbody>
   				</table>
@@ -107,14 +107,14 @@
   							<td><p>Planning</p></td>
   							<td><input type="text" class="datepicker"></td>
   							<td><p>Sitemap, Wireframe and Mockup</p></td>
-  							<td><input type="text" class="fee"></td>
+  							<td>&#36;<input type="text" class="fee"></td>
   						</tr>
   						<tr>
   							<th scope="row">2</th>
   							<td><p>HTML / CSS Template</p></td>
   							<td><input type="text" class="datepicker"></td>
   							<td>Page Layouts, Website Design</td>
-  							<td><input type="text" class="fee"></td>
+  							<td>&#36;<input type="text" class="fee"></td>
   						</tr>
   					</tbody>
   				</table>
@@ -133,17 +133,17 @@
   					<tbody>
   						<tr>
   							<th scope="row">1</th>
-  							<td><p>Back-End Development</p></td>
+  							<td><p>Back-End Dev</p></td>
   							<td><input type="text" class="datepicker"></td>
   							<td><p>Database, Datbase Schema</p></td>
-  							<td><input type="text" class="fee"></td>
+  							<td>&#36;<input type="text" class="fee"></td>
   						</tr>
   						<tr>
   							<th scope="row">2</th>
   							<td><p>Features</p></td>
   							<td><input type="text" class="datepicker"></td>
   							<td><p>Custom Functions and features</p></td>
-  							<td><input type="text" class="fee"></td>
+  							<td>&#36;<input type="text" class="fee"></td>
   						</tr>
   					</tbody>
   				</table>
@@ -165,21 +165,21 @@
   							<td><p>Hosting Server</p></td>
   							<td><input type="text" class="datepicker"></td>
   							<td><p>Server Setup, Domain Name Setup</p></td>
-  							<td><input type="text" class="fee"></td>
+  							<td>&#36;<input type="text" class="fee"></td>
   						</tr>
   						<tr>
   							<th scope="row">2</th>
   							<td><p>Site Launch</p></td>
   							<td><input type="text" class="datepicker"></td>
   							<td><p>Site Testing, Go Live</p></td>
-  							<td><input type="text" class="fee"></td>
+  							<td>&#36;<input type="text" class="fee"></td>
   						</tr>
   						<tr>
   							<th scope="row"></th>
   							<td></td>
   							<td></td>
   							<td></td>
-  							<td class="total"><input type="text" value=""></td>
+  							<td class="total">&#36;<input type="text" value=""></td>
   						</tr>
 
   					</tbody>
