added resources page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   				<li><a href="">Contract</a></li>
   				<li><a href="index.html">Stages</a></li>
   				<li><a href="project-proposal.html">Project Proposal</a></li>
+  				<li><a href=""><button class="btn btn-sm-info">Contract</button></a></li>
   			</ul>
   		</nav>
   	</header>
